--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.example</groupId>
   <artifactId>maven-demo</artifactId>
@@ -7,6 +8,7 @@
   <version>1.0-SNAPSHOT</version>
   <name>maven-demo</name>
   <url>http://maven.apache.org</url>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -20,4 +22,19 @@
       <version>2.10</version>
    </dependency>
   </dependencies>
+
+  <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>  <!-- Setze die Quellversion auf 1.8 -->
+                    <target>1.8</target>  <!-- Setze die Zielversion auf 1.8 -->
+                </configuration>
+            </plugin>
+        </plugins>
+  </build>
+
 </project>
