--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,20 @@
   <name>maven-demo</name>
   <url>http://maven.apache.org</url>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -22,19 +36,5 @@
       <version>2.10</version>
    </dependency>
   </dependencies>
-
-  <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>1.8</source>  <!-- Setze die Quellversion auf 1.8 -->
-                    <target>1.8</target>  <!-- Setze die Zielversion auf 1.8 -->
-                </configuration>
-            </plugin>
-        </plugins>
-  </build>
 
 </project>
